feat: adjust and improve

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -64,7 +64,11 @@
   </form>
 
   <div class="info">
-    <strong>Demo:</strong> admin / admin
+    <strong>Demo:</strong>
+    <br>
+    Admin: admin / admin123
+    <br>  
+    Staff: staff1 / staff123
   </div>
 </body>
 </html>
